--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "final-form": "^4.20.7",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
@@ -78,6 +80,7 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "0.0.13",
+    "@testing-library/react-hooks": "^8.0.1",
     "babel-plugin-named-exports-order": "0.0.2",
     "prop-types": "^15.8.1",
     "webpack": "^5.75.0"
